--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
    <section>
       <div class="container">
-         <h2>My shopping cart</h2>
+         <h2 class="bg-primary text-center
+         p-2 m-2 text-white">My shopping cart</h2>
          <div class="cart">
             <div class="col-md-12 col-lg-10 mx-auto">
                <div class="cart-item">
@@ -82,9 +83,10 @@
       </div>
    </section>
    <!-- script -->
-   <script src="utilities.js"></script>
+   <script src="utilites.js"></script>
    <script src="phone.js"></script>
    <script src="case.js"></script>
+   
 
 </body>
 
